--- a/w09-y24-101/w09-y24-101.html
+++ b/w09-y24-101/w09-y24-101.html
@@ -489,40 +489,46 @@
                 <tr>
                   <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
                 </tr>
-                <!-- start box-item.html -->
-<tr>
-  <td align="left" style="background: {{ item['background_color'] }}; border-collapse: collapse; border-radius: 0.8rem;">
+               <!-- start box-item.html -->
+               <tr>
+                <td align="left" class="headline" style="background: #f2f2f2;border-collapse: collapse;border-bottom: 2px solid #FFFFFF;padding-top: 15px;padding-right: 20px;padding-left: 20px;padding-bottom: 15px;border-radius: 0.8rem;">
+                  <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: 600;line-height: 23px;color: #000000;margin: 0;padding: 0;">Support Small Scale Stuff</h1>
+                </td>
+              </tr>
 
-    <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="416">
-      <tbody>
-        <tr>
-          <td class="padt20 padr10 padl20" style="border-collapse: collapse;padding-top: 20px;padding-right: 10px;padding-left: 20px;" valign="top">
-            <p class="marb0" style="font-family: '{{ item['font_family'] }}';  font-style: '{{ item['font_style'] }};font-size: 16px;line-height: 23px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 0;">
-              <img src="{{ item['image_url'] }}" alt="⊂(◉‿◉)つ" width="290" height="auto" class="img" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 416px;width: 100%; border-radius: 0.8rem;margin-bottom: 0.8rem;">
-            </p>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  
-    <!--[if mso]></td><td width="35%" valign="top"><![endif]-->
-    <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="224">
-      <tbody>
-        <tr>
-          <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
-            <p style="font-family: '{{ item['font_family'] }}'; font-style: '{{ item['font_style'] }}'; font-size: 16px;line-height: 23px;font-weight: 400;color: {{ item['text_color'] }};padding: 0;margin: 0;margin-bottom: 15px;">
-             {{ item['main_copy'] }}<br>
-              <a href="{{ item['link_ref'] }}" style="text-decoration: underline;color: {{ item['text_color'] }} !important;"><b style="font-weight: 600;">{{ item['link_text'] }}</b></a>
-            </p>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+              <tr>
+                <td align="left" style="background: #f2f2f2;border-collapse: collapse; border-radius: 0.8rem;">
 
-    <!--[if mso]></td></tr></table><![endif]-->
-  </td>
-</tr>
-<!-- end box-item.html -->
+                  <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="416">
+                    <tbody>
+                      <tr>
+                        <td class="padt20 padr10 padl20" style="border-collapse: collapse;padding-top: 20px;padding-right: 10px;padding-left: 20px;" valign="top">
+                          <p class="marb0" style="font-size: 16px;line-height: 23px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 0;">
+                            <img src="https://backoffice.nearfuturelaboratory.com/ad-images/2024/03/Love-Hulten-NES-square.webp" alt="⊂(◉‿◉)つ" width="290" height="auto" class="img" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 416px;width: 100%; border-radius: 0.8rem;margin-bottom: 0.8rem;">
+                          </p>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                
+                  <!--[if mso]></td><td width="35%" valign="top"><![endif]-->
+                  <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="224">
+                    <tbody>
+                      <tr>
+                        <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
+                          <p style="font-size: 16px;line-height: 23px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">
+                            You can back this awe-inspiring work published by Volume a curated publishing platform enabling the creation of high-quality illustrated books on visual culture. Apparatum is the debut monograph from the Jules Verne of device design.<br>
+                            <a href="https://vol.co/collections/apparatrum" style="text-decoration: underline;color: #000000 !important;"><b style="font-weight: 600;">Love Hultén <em>Apparatrum</em></b>  ∰</a>
+                          </p>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+
+                  <!--[if mso]></td></tr></table><![endif]-->
+                </td>
+              </tr>
+              <!-- end box-item.html -->
 
 <!-- END -->
 <!-- End -->
