--- a/w09-y24-101/output_box-item-2_1.html
+++ b/w09-y24-101/output_box-item-2_1.html
@@ -21,7 +21,7 @@
                       <tr>
                         <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
                           <p style="font-family: \"Roslindale\"; font-style: normal font-size: 16px;line-height: 23px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">
-                            You can back this awe-inspiring work published by Volume a curated publishing platform enabling the creation of high-quality illustrated books on visual culture. Apparatum is the debut monograph from the Jules Verne of device design.</a>
+                            This is a great book</a>
                           </p>
                         </td>
                       </tr>
