--- a/w09-y24-101/output_discord-callout-item_1.html
+++ b/w09-y24-101/output_discord-callout-item_1.html
@@ -1,4 +1,4 @@
-                <!-- start format-callout-item.html -->
+                <!-- start discord-callout-item.html -->
                 <tr>
                   <td align="left" style="border-collapse: collapse;">
 
@@ -9,11 +9,11 @@
                       <tbody>
                         <tr>
                           <td class="padt15 padr10 padl20" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px;" valign="top">
-                            <h2 class="padb5" style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #f0f0f0; margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
+                            <h2 class="padb5" style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000; margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
                               <a href="https://nearfuturelaboratory.com" style="text-decoration: underline;item['text_color']}} !important;">
                                 SpecFi: Necessary Tomorrows
                               </a> ➜</h2>
-                            <h3 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color:color:  !important;">In the &#127911;-podcasts channel @florianlow posted</h3>
+                            <h3 style="mso-line-height-rule: exactly;font-size: 12px;line-height: 18px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color:color: #0f0f0f !important;">In the &#127911;-podcasts channel @florianlow posted</h3>
                           </td>
                         </tr>
                       </tbody>
@@ -24,7 +24,7 @@
                       <tbody>
                         <tr>
                           <td class="padt15 padr20 padl10 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
-                            <p style="font-size: 16px;line-height: 23px;font-weight: 400;#f0f0f0;padding: 0;margin: 0;margin-bottom: 15px;">The "Necessary Tomorrows" podcast, presented by Doha Debates and Al Jazeera Podcasts, blends speculative fiction with documentary elements, inviting listeners to explore potential futures shaped by the interactions between humans, artificial intelligence, and the natural world, as envisioned by science fiction writers and actualized by activists and scientists.</p>
+                            <p style="font-size: 16px;line-height: 20px;font-weight: 400;#000000;padding: 0;margin: 0;margin-bottom: 15px;">The "Necessary Tomorrows" podcast, presented by Doha Debates and Al Jazeera Podcasts, blends speculative fiction with documentary elements, inviting listeners to explore potential futures shaped by the interactions between humans, artificial intelligence, and the natural world, as envisioned by science fiction writers and actualized by activists and scientists.</p>
                           </td>
                         </tr>
                       </tbody>
@@ -33,4 +33,4 @@
                     <!--[if mso]></td></tr></table><![endif]-->
                   </td>
                 </tr>
-                  <!-- end format-callout-item.html -->
+                  <!-- end discord-callout-item.html -->
