--- a/w09-y24-101/output_featured-item_1.html
+++ b/w09-y24-101/output_featured-item_1.html
@@ -5,7 +5,7 @@
             <tbody>
               <tr>
                 <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
-                  <p style="font-family: 'Roslindale'; 'normal' font-size: 16px;line-height: 23px;font-weight: 400;color: #f0f0f0;padding: 0;margin: 0;margin-bottom: 15px;">
+                  <p style="font-family: 'Roslindale'; 'normal' font-size: 16px;line-height: 23px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">
                     <img src="https://backoffice.nearfuturelaboratory.com/ad-images/2024/02/BLEECKER_STUFF__ITTIH_2_600px.png" alt="⊂(◉‿◉)つ"" width="290" height="auto" style="-ms-interpolation-mode: bicubic;display: block;max-height: 900px;max-width: 416px;width: 100%; border-radius: 0.8rem;">
                   </p>
                 </td>
@@ -19,11 +19,10 @@
               <tr>
                 <td class="padt15 padr10 padl20 mobt0" style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px;" valign="top">
                   <h2 class="padb5" style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: #000000;margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
-                    <a href="https://nearfuturelaboratory.com" style="text-decoration: underline;color:#f0f0f0 !important;">title
-                    </a></h2>
-                  <h3 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color: #070707 !important;">A beautiful opportunity to see the shape of arts education nowadays.</h3>
-                  <p style="font-family: 'Roslindale';  'normal; font-size: 16px;line-height: 23px;font-weight: 400;color:#f0f0f0;padding: 0;margin: 0;margin-bottom: 15px;">This is the main copy<br>
-                    <a href="https://nearfuturelaboratory.com" style="text-decoration: underline;color:#f0f0f0 !important;">Read More</a> ⇒</p>
+                    <a href="https://nearfuturelaboratory.com" style="text-decoration: underline;color:#000000 !important;">Title</a></h2>
+                  <h3 style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 400;margin: 0;padding: 0 0 5px 0;color: #0f0f0f !important;">Subtitle</h3>
+                  <p style="font-family: 'Roslindale';  'normal; font-size: 16px;line-height: 23px;font-weight: 400;color:#000000;padding: 0;margin: 0;margin-bottom: 15px;">This is the main copy<br>
+                    <a href="https://nearfuturelaboratory.com" style="text-decoration: underline;color:#000000 !important;">Read More</a> ⇒</p>
                 </td>
               </tr>
               </tbody>
