--- a/w09-y24-101/w09-y24-101.html
+++ b/w09-y24-101/w09-y24-101.html
@@ -489,14 +489,18 @@
                 <tr>
                   <td class="spacer" style="border-collapse: collapse;font-size: 1px;line-height: 1;padding-top: 25px;"> </td>
                 </tr>
-               <!-- start box-item.html -->
-               <tr>
-                <td align="left" class="headline" style="background: #f2f2f2;border-collapse: collapse;border-bottom: 2px solid #FFFFFF;padding-top: 15px;padding-right: 20px;padding-left: 20px;padding-bottom: 15px;border-radius: 0.8rem;">
-                  <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: 600;line-height: 23px;color: #000000;margin: 0;padding: 0;">Support Small Scale Stuff</h1>
-                </td>
-              </tr>
 
-              <tr>
+                <!-- start box-item-header.html-->
+                <tr>
+                  <td align="left" class="headline" style="background: #f2f2f2;border-collapse: collapse;border-bottom: 2px solid #FFFFFF;padding-top: 15px;padding-right: 20px;padding-left: 20px;padding-bottom: 15px;border-radius: 0.8rem;">
+                    <h1 style="mso-line-height-rule: exactly;font-size: 21px;font-weight: 600;line-height: 23px;color: #000000;margin: 0;padding: 0;">Book Haul</h1>
+                  </td>
+                </tr>
+                <!-- end box-item-header.html-->
+
+               <!-- start box-item.html -->
+
+               <tr>
                 <td align="left" style="background: #f2f2f2;border-collapse: collapse; border-radius: 0.8rem;">
 
                   <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="416">
@@ -516,9 +520,8 @@
                     <tbody>
                       <tr>
                         <td class="padt15 padr20 padl10" style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
-                          <p style="font-size: 16px;line-height: 23px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">
-                            You can back this awe-inspiring work published by Volume a curated publishing platform enabling the creation of high-quality illustrated books on visual culture. Apparatum is the debut monograph from the Jules Verne of device design.<br>
-                            <a href="https://vol.co/collections/apparatrum" style="text-decoration: underline;color: #000000 !important;"><b style="font-weight: 600;">Love Hultén <em>Apparatrum</em></b>  ∰</a>
+                          <p style="font-family: \"Roslindale\"; font-style: normal font-size: 16px;line-height: 23px;font-weight: 400;color: #000000;padding: 0;margin: 0;margin-bottom: 15px;">
+                            This is a great book</a>
                           </p>
                         </td>
                       </tr>
