--- a/w20-y24.json/w20-y24.html
+++ b/w20-y24.json/w20-y24.html
@@ -85,8 +85,17 @@
     @media screen and (max-width:599px) {
       .force-row,
       .container,
-      .header,
       .body,
+      table {
+    width: 100% !important;
+    max-width: 100% !important;
+  }
+  .header {
+    width: 100% !important;
+    max-width: 100% !important;
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+  }
       .footer {
         width: 100% !important;
         max-width: 100% !important;
@@ -217,10 +226,10 @@
                 <!--[if mso]>
                   <table border="0" cellpadding="0" cellspacing="0" width="100%">
                     <tr><td width="35%" valign="top"><![endif]-->
-                      <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; max-width: 100%;">
+                      <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 660px; max-width: 660px;">
                         <tbody>
                           <tr>
-                            <td style="border-collapse: collapse; padding: 15px 10px 5px 3rem;" valign="top">
+                            <td style="border-collapse: collapse; padding: 15px 10px 5px 0rem;" valign="top">
                               <p style="font-family:'FormaDJRVariable'; font-weight: 800; font-size: 24px; line-height: 24px; color: #000000; padding: 0; margin: 0; margin-bottom: 5px;">
                                 <!-- QUOTE -->
                                 Imagination<br>Precedes<br> Inspiration<br>Precedes <br>Innovation
@@ -265,8 +274,6 @@
     <!-- BODY -->
     <table border="0" cellpadding="0" cellspacing="0" style="background-color: #ffffff; border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
       <tbody>
-        <tr>
-
 
         <tr>
           <td align="center" style="padding-left: 0.5rem; padding-right: 1rem; background-color: #FFFFFF;border-collapse: collapse;" valign="top">
